# TauExperimentDataAnalyzer

./: CMakeLists.txt  Dockerfile  ExecutableTarget.cmake  FocusDiagnostic.desktop  build.sh  main.cpp  run.sh
BoxPlot/: CMakeLists.txt  main.cpp
CompilingTests/: CMakeLists.txt  main.cpp
FocusDiagnostics/: CMakeLists.txt  Controller.cpp  Controller.h  ISCameraController.cpp  ISCameraController.h  ISCameraHelpers.h  ImageDataModel.cpp  ImageDataModel.h  SpeedTestPlot.cpp  SpeedTestPlot.h  focusdiagnosticsmainwindow.cpp  focusdiagnosticsmainwindow.h  focusdiagnosticsmainwindow.ui  main.cpp  resources.qrc
FocusDiagnostics/GUI/: focusdiagnosticsmainwindow.cpp  focusdiagnosticsmainwindow.ui
FocusDiagnostics/SDK/: tiscamera-dev_1.1.0.4139_amd64_ubuntu_1804.deb  tiscamera_1.1.0.4139_amd64_ubuntu_1804.deb
FocusDiagnostics/TestData/: 1134_0dBBG.tiff  1208_0dB.tiff
LaserDiagnostics/: CMakeLists.txt  CameraCoreGUI.cpp  CameraCoreGUI.h  CameraCoreGUI.ui  main.cpp
MockIOC/: first.db
Toolkits/: TauAppSettingController.cpp  TauAppSettingController.h  TauApplication.cpp  TauApplication.h
UT3RC/: CMakeLists.txt  main.cpp  resources.qrc
UT3RC/CameraControlWidget/: CameraControl.cpp  CameraControl.h  CameraControl.ui  CameraControl_Controller.cpp  CameraControl_Controller.h  CameraTypes.h  EPICSDataInterface.cpp  EPICSDataInterface.h
UT3RC/Controller/: RCController.cpp  RCController.h
UT3RC/EPICS/: DataGrabber.cpp  DataGrabber.h
UT3RC/MainWindow/: DataGrabber.cpp  DataGrabber.h  RCController.cpp  RCController.h  RCMainWindow.cpp  RCMainWindow.h  RCMainWindow.ui
docker/: Dockerfile  build.sh  run.sh
